Removed unneeded stuff

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <script src="assets/js/site.js"></script>
 </head>
 <body>
+    <div class="hero"></div>
     <div class="wrapper">
-        <canvas id="myCanvas" class="canvas" width="332" height="500">
+        <canvas id="myCanvas" class="canvas" width="1200" height="500">
         <!-- Insert fallback content here -->
         </canvas>
-        <!-- <img src="assets/images/logo.png" alt=""> -->
     </div>
 </body>
 </html>
